structuring my database.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,9 @@
 services:
   mysql:
-    container_name: 'fakeAPiDB'
+    container_name: 'fakeAPI'
     image: 'mysql:latest'
     environment:
-      - 'MYSQL_DATABASE=fakeAPiDB'
+      - 'MYSQL_DATABASE=fakeAPI'
       - 'MYSQL_PASSWORD=fakepassword'
       - 'MYSQL_ROOT_PASSWORD=fakepassword'
       - 'MYSQL_USER=user1'
