create users and stats tables.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,10 @@ services:
       - 'MYSQL_USER=user1'
     ports:
       - '3306:3306'
+
+  adminer:
+    container_name: adminer
+    image: adminer:latest
+    restart: always
+    ports:
+      - '8888:8080'
